--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,8 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
-.env.env
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
